1999-03-17  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (CLISP_INTERNAL_CHARSET): For HP-UX, set it to "ucs2".

1999-03-17  Sam Steingold  <sds@gnu.org>

	* describe.lsp (describe-object): handle CLOS classes in a
	`standard-object' method.  Describe the value of the `weak-pointer'.
	* stream.d (file_stat): fixed time handling.

1999-03-16  Sam Steingold  <sds@gnu.org>

	* describe.lsp (describe-object): replaced `standard-object' with T.

1999-03-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * defs1.lsp (package-iterator-function): New function, taken out of
          with-package-iterator.
          (with-package-iterator): Adjust, add error message.

1999-03-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * encoding.d (nls_mbstowcs, nls_asciiext_mbstowcs, nls_wcstombs,
           nls_asciiext_wcstombs, nls_range): Use TheMachine, not ThePseudofun.
          Vital for hppa.
          (init_encodings): Use make_machine, not P. Vital for hppa.
          Initialize O(internal_encoding) always to ISO-8859-1, independently
          of the platform. If HPROMAN8_CHS is defined, use it for the other
          encodings, instead of ASCII.

1999-03-16  Sam Steingold  <sds@gnu.org>

	implement `with-package-iterator'.
	* defs1.lsp (with-package-iterator): new ANSI CL macro.
	* defs3.lsp, init.lsp: export it.

1999-03-16  Sam Steingold  <sds@gnu.org>

	* socket.d (is_number): removed.
	(resolve_host_ipaddr): return all hosts on NIL arg.
	* stream.d (user_data): return the current user with no args.
	* _impnotes.html: document this.

1999-03-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (rd_ch_terminal2): Restructure this function. Call
          rd_ch_unbuffered, in order to respect the stream's encoding.
          When EOF has been reached, no need to set strm_rd_ch_last,
          the caller already does this.
          (lisp_completion_matches): Do filename completion also after #P".