@@ -853,7 +853,7 @@
   #ifdef HAVE_ICONV
     #include <iconv.h>
     extern_C iconv_t iconv_open (const char * to_code, const char * from_code);
-    extern_C size_t iconv (iconv_t cd, const char * *inbuf, size_t *inbytesleft, char * *outbuf, size_t* outbytesleft);
+    extern_C size_t iconv (iconv_t cd, ICONV_CONST char * *inbuf, size_t *inbytesleft, char * *outbuf, size_t* outbytesleft);
     extern_C int iconv_close (iconv_t cd);
   #endif
 
