@@ -700,6 +700,8 @@
 /* Define if you have <iconv.h>, the iconv_t type, and the
    iconv_open, iconv, iconv_close functions. */
 #undef HAVE_ICONV
+/* Define as const if the declaration of iconv() needs const. */
+#define ICONV_CONST
 
 
 /* OS services */
